--- a/mainpage.html
+++ b/mainpage.html
@@ -8,13 +8,13 @@
         
         <div>
             <a href="Home.html" class="hjemmeside1">Hjem</a>
-        </div>
+        </div> 
 
         <br><br>
         </style>
         <div class="maincontainerpage">
         <p>Vennligst logg inn:</p>
-        <form method="post" action="login.php">
+        <form method="post" action="Home.html">
             <label for="brukernavn">Brukernavn:</label>
             <input type="text" name="brukernavn" /><br />
             <label for="passord">Passord:</label>
