--- a/success.html
+++ b/success.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div class="sak">
-        <form method="post" action="saktekst.php"> 
+        <form method="post" action="Home.html"> 
             <input type="text" name="name" placeholder="Navn"><br>
             <input type="text" name="email" placeholder="Epost"><br><br>
             <textarea placeholder="Skriv noe her..." name="my_text"></textarea> 
